# PomdpSpaceShipEnv

./: .readthedocs.yaml  CMakeLists.txt  README.rst  pyproject.toml  setup.py
docs/source/: conf.py  index.rst  modules.rst  pomdp_spaceship_env.rst  usage.rst
examples/: test.py  train_ppo.py
examples/RL/: policies.py  ppo.py
src/: CMakeLists.txt  CMakeLists.txt.old  Controller.cpp  Controller.h  Label.cpp  Label.h  ThreadPool.cpp  ThreadPool.h  goalv.py  interface.cpp  interface.h  main.cpp  pyproject.toml  recurrent_ppo.py  rl_agent.cpp  rl_agent.h  scenario.cpp  scenario.h
src/SpaceShipSim/: DistanceSensors.cpp  DistanceSensors.h  Obstacle.cpp  Obstacle.h  SpaceControllers.cpp  SpaceControllers.h  SpaceShip.cpp  SpaceShip.h  SpaceShipSim.cpp  SpaceShipSim.h  util.h
src/SpaceShipSim/viz_helpers/: GlowingBall.cpp  GlowingBall.h  boosterglare.cpp  boosterglare.h  emitter.cpp  emitter.h  goal.cpp  goal.h  particle.cpp  particle.h
src/pomdp_spaceship_env/: __init__.py
src/resources/: Arial.h  booster.h  mainframe.h
tests/: ppo_no_rec.py  test.py  train_ppo.py
tests/RL/: buffers.py  policies.py  ppo.py
