[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "pomdp_spaceship_env"
version = "0.0.1"
description="A partially observable space ship environment for RL tasks."
authors = [
  { name = "Finn Lukas Busch", email = "finn.lukas.busch@gmail.com" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true


[tool.cibuildwheel]
build-verbosity = 1
